--- a/tests/test1.in
+++ b/tests/test1.in
@@ -3,3 +3,52 @@ let x = new 0, y = new 0 in let f = fun x,y -> x:= !x + !y end in y:=1;f(x,y);!x
 let f = fun x,y -> x+y end in let a=1,b=2 in f(a,b) end end;;
 
 if 2 < 3 && 1 > 0 && true != false then true else false end;;
+
+(new 3):=6;;
+
+let a = new 5 in a:= !a + 1; !a end;;
+
+for( i = new 0; !i < 10; i:= !i + 1) in i end;;
+
+let 
+	x = new 10,
+	s =	new	0
+in
+	while !x > 0 do
+		s:= !s + !x;
+		x:=!x-1
+	end;
+	!s
+end;;
+
+let f = fun n, b ->
+		let x = new n,
+			s = new b
+		in
+			while !x > 0 do
+				s := !s + !x;
+				x := !x - 1
+			end;
+			!s
+		end
+end
+in
+	f(10,0) + f(100,20)
+end;;
+
+let 
+	x = new 0,
+	n = 24,
+	m = 42
+in
+	for( i = new 0; !i < m; i:= !i + 1) in
+		x:= ( !x + 1 ) % n
+	end;
+	
+	!x
+end;;
+	 
+	
+	
+	
+	
