--- a/tests/test1.in
+++ b/tests/test1.in
@@ -68,6 +68,11 @@ end;;
 
 let f = fun x -> if x==0 then 1 else x*f(x-1) end end in f(3) end;; // 6
 	
-	
+let
+	 r = new 0,
+	 f = fun -> r:= 1 +!r; !r end
+in
+	f();f();f();f()
+end;; // 4	
 	
 	
