--- a/tests/test2.in
+++ b/tests/test2.in
@@ -5,11 +5,11 @@
 
 (new 3) := 6;; // 6
 
-let a :int = new 5 in a := !a + 1; !a end;; // 6
+let a :ref int = new 5 in a := !a + 1; !a end;; // 6
 
 let
-    x : int = new 10,
-    s:int = new 0 in
+    x :ref int = new 10,
+    s:ref int = new 0 in
     while !x > 0 do
         s := !s + !x;
         x := !x - 1
@@ -19,8 +19,8 @@ end;; // 55
 
 let f :( int,int)int = fun n:int, b:int->
     let
-        x : int = new n,
-        s : int = new b
+        x :ref int = new n,
+        s :ref int = new b
     in
         while !x>0 do
             s := !s + !x ; x := !x - 1
@@ -30,3 +30,24 @@ let f :( int,int)int = fun n:int, b:int->
 end
 in f(10, 0)+f(100,20)
 end;;   //5125
+
+let f:(bool, ref int)bool = fun x:bool, y:ref int -> if x then y := 1 else y := 0 end end
+in
+    let x:ref int = new 8,
+        y:ref bool = new true
+    in
+        f(!y, x); !x
+    end
+end;; // 1
+
+let f:(ref bool, ref int)int = fun x:ref bool, y:ref int -> (if !x then y:= !y + 1 else y := !y - 1 end); !y end
+in
+    f(new false, new 0)
+end;; // -1
+
+let x:ref int = new 1 in
+    for( i:ref int = new 10; !i > 0; i:= !i - 1) in
+		x := (!x * 2)
+	end;
+	!x
+end;; //1024
